# pytorch-llama-3

./: .gitignore  README.md  download.sh  main.py  pyproject.toml
inference/: __init__.py  inference.py
model/: __init__.py  base.py  config.py  model.py  test_model.ipynb
tokenizer/: test_tokenizer.ipynb  tokenizer.py
