[tool.poetry]
name = "pytorch-llama-3"
version = "0.1.0"
description = ""
authors = ["ishan-modi <ishan.modi24@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
torch = "2.5.1"
tiktoken = "0.8.0"
tqdm = "4.67.1"


[tool.poetry.group.dev.dependencies]
llama-stack = "0.0.63"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
